# ST-graph-rag-mcp

./: .editorconfig  .gitignore  .gitmodules  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  biome.json  build.py  bunfig.toml  opencode.json  package.json  publish-npm.bat  publish-npm.sh  setup.cmd  smoke-test.ps1  test-mcp.js  tmp_snapshot.json  tsconfig.json
docs/: ADR-001-cross-repo-lsp-pipeline.md  ARCHITECTURE.md  OBSIDIAN_INTEGRATION.md  release-pipeline.md
scripts/: build.ts  clean.ts  embed-probe.ts  run-tests.js  setup.ts  smoke.js  test-baseline.cjs  test-st-pipeline.cjs
src/: index.ts  st-index.ts  ui-embed.gen.ts
test/: e2e.test.ts
trust-platform-main/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  (+3 more)
trust-platform-main/benches/: Cargo.toml  hir_bench.rs  ide_bench.rs  lexer_bench.rs  parser_bench.rs  runtime_bench.rs
trust-platform-main/crates/trust-twin-compiler/: Cargo.toml
trust-platform-main/crates/trust-twin-compiler/src/: lib.rs  robot_fb.rs
trust-platform-main/crates/trust-twin-compiler/tests/: robot_cell_example.rs  robot_fb_generator.rs  topology_compiler.rs
trust-platform-main/crates/trust-twin-compiler/tests/fixtures/topology/bad/: domain_mismatch.topology.expected.txt  domain_mismatch.topology.toml  floating_workpiece.topology.expected.txt  floating_workpiece.topology.toml  gripper_approach_under.topology.expected.txt  gripper_approach_under.topology.toml  missing_attachment_target.topology.expected.txt  missing_attachment_target.topology.toml  oversized_grid_footprint.topology.expected.txt  oversized_grid_footprint.topology.toml  raw_xyz_without_justification.topology.expected.txt  raw_xyz_without_justification.topology.toml  robot_link_below_floor.topology.expected.txt  robot_link_below_floor.topology.toml  unknown_kind.topology.expected.txt  unknown_kind.topology.toml
trust-platform-main/crates/trust-twin-compiler/tests/fixtures/topology/good/: tank_pump_valve.topology.toml  tank_pump_valve.view.toml
trust-platform-main/crates/trust-twin-renderer/: Cargo.toml
trust-platform-main/crates/trust-twin-renderer/src/: lib.rs
(+518 files in other folders)
